Refactoring updates: Replaced hardcoded magical strings on constants. Added configuration validation. Added UserManagement.Common project for shared utilities like ValidationResult class

--- a/UserManagement.Application/UserManagement.Application.csproj
+++ b/UserManagement.Application/UserManagement.Application.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\UserManagement.Common\UserManagement.Common.csproj" />
     <ProjectReference Include="..\UserManagement.Domain\UserManagement.Domain.csproj" />
   </ItemGroup>
 
