--- a/UserManagementAPI/appsettings.Development.json
+++ b/UserManagementAPI/appsettings.Development.json
@@ -4,7 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  },
+  },  
+  "UserRepositoryType": "InMemoryCache",
   "CacheSettings": {
     "UserTable": "Users"
   }
